--- a/aula-10-09-24/style.css
+++ b/aula-10-09-24/style.css
@@ -9,6 +9,18 @@
 
 body{
     background-color: #ccc;
-    margin-top: -10px;
-    
+    margin-top: -10px; 
+}
+
+img{
+    border-radius: 15px;
+}
+
+.imagem{
+    width: 100%;
+    text-align: center;
+}
+
+h1{
+    font-family: 'Courier New';
 }
