--- a/aula-10-09-24/style.css
+++ b/aula-10-09-24/style.css
@@ -8,8 +8,7 @@
 }
 
 body{
-    background-color: #ccc;
-    margin-top: -10px; 
+    background-color: #ccc; 
 }
 
 img{
@@ -23,4 +22,13 @@ img{
 
 h1{
     font-family: 'Courier New';
+}
+
+header{
+    background-color: black;
+    padding: 20px;
+}
+header a{
+    color: white;
+    font-size: 18pt;
 }
