--- a/terca-quinta-manha/exemplos/cores/asserts/css/style.css
+++ b/terca-quinta-manha/exemplos/cores/asserts/css/style.css
@@ -20,6 +20,11 @@
     box-sizing: border-box;
 }
 
+header{
+    border-bottom: 1px solid #141e2654;
+    padding: 10px;
+}
+
 .fundo{
     height: 100vh;
     width: 100%;
@@ -39,9 +44,10 @@ article{
     width: 50%;
     padding: 10px;
     margin: 200px auto;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(1px);
     border-radius: 15px;
     color: #141E26;
+    text-align: center;
 }
 
 h1{
@@ -54,3 +60,27 @@ p{
     line-height: 25px;
     font-size: 14pt;
 }
+
+         
+.btn-grad {
+    background-image: linear-gradient(to right, #AAB5BF 0%, #5E7B8C  51%, #AAB5BF  100%);
+    margin: 80px auto;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-color: #5E7B8C;
+    border-radius: 10px;
+    display: block;
+  }
+
+  .btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+  }
+ 
